# taskguardian

./: .gitignore  .prettierrc  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  run.sh  svelte.config.js  tailwind.config.cjs
.github/workflows/: codeql.yml  docker-publish.yml
nginx/: server.conf
server/: package-lock.json  package.json  tsconfig.json
server/src/: app.ts  sync.ts  tasks.ts  taskwarrior.ts
src/: app.html
src/lib/: Alert.svelte  Button.svelte  CustomNotification.svelte  FormModal.svelte  SyncButton.svelte  TabButton.svelte  TaskActions.svelte  TaskAnnotationFormModal.svelte  TaskDescription.svelte  TaskFormModal.svelte  TaskIcons.svelte  TaskList.svelte  stores.js  stores.ts  utilities.js  utilities.ts  utils.ts
src/routes/: +layout.svelte  +page.server.js  +page.server.ts  +page.svelte
svelte_backup/: package.json
svelte_backup/nginx/: server.conf
svelte_backup/src/routes/: +layout.svelte  +page.server.ts
taskguardian/: .gitignore  asgi.py  manage.py  package-lock.json  package.json  settings.py  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  urls.py  wsgi.py
taskguardian/.storybook/: main.ts  preview.ts
taskguardian/src/: App.svelte
taskguardian/src/lib/: TaskCard.stories.js  TaskCard.svelte  TaskList.svelte  (+2 more)
taskguardian/taskguardian/: api.py  asgi.py  settings.py  urls.py  wsgi.py
taskguardian/tasks/: admin.py  api.py  models.py
tasks/: serializers.py  urls.py  views.py
theme/static_src/: package-lock.json  package.json
theme/templates/: base.html
(+9 files in other folders)
