[tool.poetry]
name = "taskguardian"
version = "0.1.0"
description = "Taskguardian is a taskwarrior web interface"
authors = ["Bernard Siebens <bernard@siebens.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
